@@ -1,4 +1,4 @@
-rev 13-Sep_15-13_55
+rev 13-Oct_25-09_02
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -289,3 +289,6 @@ Fixed some label tags in edit.php
 15 Sep
 Updates to language strings in fckeditor
 Final Dutch lang update
+
+24 Oct
+Removed from Aug 13 fix for handling plain text samaba shares; it corrupts some plugin markup.
